@@ -2,7 +2,14 @@
 # vim: filetype=ruby
 # WARN
 
+# NOTICE: Ruby is during initialization here.
+# * Encoding.default_external does not reflects -E.
+# * Should not expect Encoding.default_internal.
+# * Locale encoding is available.
+
 if defined?(Gem) then
+
+  # :stopdoc:
 
   module Kernel
 
@@ -15,16 +22,16 @@ if defined?(Gem) then
   module Gem
 
     ConfigMap = {
-      :BASERUBY => RbConfig::CONFIG["BASERUBY"],
-      :sitedir => RbConfig::CONFIG["sitedir"],
-      :ruby_version => RbConfig::CONFIG["ruby_version"],
-      :libdir => RbConfig::CONFIG["libdir"],
-      :sitelibdir => RbConfig::CONFIG["sitelibdir"],
-      :arch => RbConfig::CONFIG["arch"],
-      :bindir => RbConfig::CONFIG["bindir"],
-      :EXEEXT => RbConfig::CONFIG["EXEEXT"],
-      :RUBY_SO_NAME => RbConfig::CONFIG["RUBY_SO_NAME"],
-      :ruby_install_name => RbConfig::CONFIG["ruby_install_name"]
+      :EXEEXT            => RbConfig::CONFIG["EXEEXT"],
+      :RUBY_SO_NAME      => RbConfig::CONFIG["RUBY_SO_NAME"],
+      :arch              => RbConfig::CONFIG["arch"],
+      :bindir            => RbConfig::CONFIG["bindir"],
+      :libdir            => RbConfig::CONFIG["libdir"],
+      :ruby_install_name => RbConfig::CONFIG["ruby_install_name"],
+      :ruby_version      => RbConfig::CONFIG["ruby_version"],
+      :rubylibprefix     => RbConfig::CONFIG["rubylibprefix"],
+      :sitedir           => RbConfig::CONFIG["sitedir"],
+      :sitelibdir        => RbConfig::CONFIG["sitelibdir"],
     }
 
     def self.dir
@@ -60,26 +67,32 @@ if defined?(Gem) then
     end
 
     def self.set_home(home)
+      home = home.gsub File::ALT_SEPARATOR, File::SEPARATOR if File::ALT_SEPARATOR
       @gem_home = home
-      ensure_gem_subdirectories(@gem_home)
     end
 
     def self.set_paths(gpaths)
       if gpaths
         @gem_path = gpaths.split(File::PATH_SEPARATOR)
+
+        if File::ALT_SEPARATOR then
+          @gem_path.map! do |path|
+            path.gsub File::ALT_SEPARATOR, File::SEPARATOR
+          end
+        end
+
         @gem_path << Gem.dir
       else
+        # TODO: should this be Gem.default_path instead?
         @gem_path = [Gem.dir]
       end
-      @gem_path.uniq!
-      @gem_path.each do |gp| ensure_gem_subdirectories(gp) end
-    end
 
-    def self.ensure_gem_subdirectories(path)
+      @gem_path.uniq!
     end
 
     # INCLUDE rubygems/defaults
 
+    ##
     # Methods before this line will be removed when QuickLoader is replaced
     # with the real RubyGems
 
@@ -91,13 +104,13 @@ if defined?(Gem) then
 
       begin
         require 'rubygems/defaults/operating_system'
-      rescue LoadError
+      rescue ::LoadError
       end
 
       if defined?(RUBY_ENGINE) then
         begin
           require "rubygems/defaults/#{RUBY_ENGINE}"
-        rescue LoadError
+        rescue ::LoadError
         end
       end
     ensure
@@ -106,7 +119,13 @@ if defined?(Gem) then
 
     module QuickLoader
 
+      @loaded_full_rubygems_library = false
+
       def self.load_full_rubygems_library
+        return if @loaded_full_rubygems_library
+
+        @loaded_full_rubygems_library = true
+
         class << Gem
           Gem::GEM_PRELUDE_METHODS.each do |method_name|
             undef_method method_name
@@ -117,8 +136,7 @@ if defined?(Gem) then
           undef_method :gem if method_defined? :gem
         end
 
-        $".delete File.join(Gem::ConfigMap[:libdir],
-                            Gem::ConfigMap[:ruby_install_name],
+        $".delete File.join(Gem::ConfigMap[:rubylibprefix],
                             Gem::ConfigMap[:ruby_version], 'rubygems.rb')
 
         require 'rubygems'
@@ -129,14 +147,14 @@ if defined?(Gem) then
 
       def push_gem_version_on_load_path(gem_name, *version_requirements)
         if version_requirements.empty?
-          unless GemPaths.has_key?(gem_name)
-            raise LoadError.new("Could not find RubyGem #{gem_name} (>= 0)\n")
+          unless GemPaths.has_key?(gem_name) then
+            raise Gem::LoadError, "Could not find RubyGem #{gem_name} (>= 0)\n"
           end
 
           # highest version gems already active
           return false
         else
-          if version_requirements.length > 1
+          if version_requirements.length > 1 then
             QuickLoader.load_full_rubygems_library
             return gem(gem_name, *version_requirements)
           end
@@ -144,24 +162,24 @@ if defined?(Gem) then
           requirement, version = version_requirements[0].split
           requirement.strip!
 
-          if requirement == ">" || requirement == ">="
-            if (GemVersions[gem_name] <=> Gem.calculate_integers_for_gem_version(version)) >= 0
-              return false
-            end
-          elsif requirement == "~>"
-            loaded_version = GemVersions[gem_name]
-            required_version = Gem.calculate_integers_for_gem_version(version)
-            if loaded_version && (loaded_version[0] == required_version[0])
-              return false
+          if loaded_version = GemVersions[gem_name] then
+            case requirement
+            when ">", ">=" then
+              return false if
+                (loaded_version <=> Gem.integers_for(version)) >= 0
+            when "~>" then
+              required_version = Gem.integers_for version
+
+              return false if loaded_version.first == required_version.first
             end
           end
 
           QuickLoader.load_full_rubygems_library
-          gem(gem_name, *version_requirements)
+          gem gem_name, *version_requirements
         end
       end
 
-      def calculate_integers_for_gem_version(gem_version)
+      def integers_for(gem_version)
         numbers = gem_version.split(".").collect {|n| n.to_i}
         numbers.pop while numbers.last == 0
         numbers << 0 if numbers.empty?
@@ -171,16 +189,20 @@ if defined?(Gem) then
       def push_all_highest_version_gems_on_load_path
         Gem.path.each do |path|
           gems_directory = File.join(path, "gems")
-          if File.exist?(gems_directory)
+
+          if File.exist?(gems_directory) then
             Dir.entries(gems_directory).each do |gem_directory_name|
               next if gem_directory_name == "." || gem_directory_name == ".."
+
               dash = gem_directory_name.rindex("-")
               next if dash.nil?
+
               gem_name = gem_directory_name[0...dash]
               current_version = GemVersions[gem_name]
-              new_version = calculate_integers_for_gem_version(gem_directory_name[dash+1..-1])
-              if current_version
-                if (current_version <=> new_version) == -1
+              new_version = integers_for(gem_directory_name[dash+1..-1])
+
+              if current_version then
+                if (current_version <=> new_version) == -1 then
                   GemVersions[gem_name] = new_version
                   GemPaths[gem_name] = File.join(gems_directory, gem_directory_name)
                 end
@@ -210,7 +232,7 @@ if defined?(Gem) then
         # "tag" the first require_path inserted into the $LOAD_PATH to enable
         # indexing correctly with rubygems proper when it inserts an explicitly
         # gem version
-        unless require_paths.empty?
+        unless require_paths.empty? then
           require_paths.first.instance_variable_set(:@gem_prelude_index, true)
         end
         # gem directories must come after -I and ENV['RUBYLIB']
@@ -219,8 +241,9 @@ if defined?(Gem) then
 
       def const_missing(constant)
         QuickLoader.load_full_rubygems_library
-        if Gem.const_defined?(constant)
-          Gem.const_get(constant)
+
+        if Gem.const_defined?(constant) then
+          Gem.const_get constant
         else
           super
         end
@@ -239,7 +262,7 @@ if defined?(Gem) then
 
   begin
     Gem.push_all_highest_version_gems_on_load_path
-    $" << File.join(Gem::ConfigMap[:libdir], Gem::ConfigMap[:ruby_install_name],
+    $" << File.join(Gem::ConfigMap[:rubylibprefix],
                     Gem::ConfigMap[:ruby_version], "rubygems.rb")
   rescue Exception => e
     puts "Error loading gem paths on load path in gem_prelude"
